fixed temp pictures

--- a/Web Pages/home.html
+++ b/Web Pages/home.html
@@ -187,7 +187,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="Tileable.png" alt="Tileable" width="1200" height="700">
+        <img src="image/Tileable.png" alt="Tileable" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Title</h3>
           <p>Description</p>
@@ -195,14 +195,14 @@
       </div>
 
       <div class="item">
-        <img src="important-dates.png" alt="Dates" width="1200" height="700">
+        <img src="image/important-dates.png" alt="Dates" width="1200" height="700">
         <div class="carousel-caption">
   
         </div>      
       </div>
     
       <div class="item">
-        <img src="css-club.png" alt="CSS" width="1200" height="700">
+        <img src="image/css-club.png" alt="CSS" width="1200" height="700">
         <div class="carousel-caption">
  
         </div>      
