--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Google OAuth2 Microservice</title>
+    <title>Google OAuth2</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/app.css">
 </head>
 
-<body ng-app="GoogleOAuth2Microservice" ng-controller="AppCtrl" ng-cloak>
+<body ng-app="GoogleOAuth2" ng-controller="AppCtrl" ng-cloak>
 <div class="container" style="margin-top: 50px;">
     <!-- Login panel -->
     <div class=" col-md-4 col-md-offset-4">
@@ -21,7 +21,7 @@
         </div>
         <!-- End Login panel -->
 
-        <!-- Home panel.It will visible after successfull login -->
+        <!-- Home panel.It will visible after successful login -->
         <div class="panel panel-default" ng-show="user">
             <div class="panel-heading">
                 <img class="p-img" alt="" ng-src="{{user.userAuthentication.details.picture}}"> Name: {{user.name}}
