fixed google link

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
             <div class="panel-heading">Google login with OAuth2</div>
             <div class="panel-body">
                 <div class="col-md-12">
-                    <a class="btn btn-default" href="/google/login">Google Login</a>
+                    <a class="btn btn-default" href="https://www.google.com/accounts/Login">Google Login</a>
                 </div>
             </div>
         </div>
