--- a/Web Pages/home.html
+++ b/Web Pages/home.html
@@ -1,154 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	  <!-- Theme Made By www.w3schools.com - No Copyright -->
-	  <title>CPP Calendar</title>
-	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <meta name="google-signin-client_id" content="567625698601-1tm35nqtjfp2hn2mpav51po9kl9loq90.apps.googleusercontent.com">
-	  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-	  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	  <script src="https://apis.google.com/js/platform.js" async defer></script>
+	<!-- Theme Made By www.w3schools.com - No Copyright -->
+	<title>CPP Calendar</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="567625698601-1tm35nqtjfp2hn2mpav51po9kl9loq90.apps.googleusercontent.com">
 
-	  <style>
-	  body {
-	      font: 400 15px/1.8 Lato, sans-serif;
-	      color: #777;
-	  }
-	  h3, h4 {
-	      margin: 10px 0 30px 0;
-	      letter-spacing: 10px;      
-	      font-size: 20px;
-	      color: #111;
-	  }
-	  .container {
-	      padding: 80px 120px;
-	  }
-	  .person {
-	      border: 10px solid transparent;
-	      margin-bottom: 25px;
-	      width: 80%;
-	      height: 80%;
-	      opacity: 0.7;
-	  }
-	  .person:hover {
-	      border-color: #f1f1f1;
-	  }
-	  .carousel-inner img {
-	      -webkit-filter: grayscale(90%);
-	      filter: grayscale(90%); /* make all photos black and white */ 
-	      width: 100%; /* Set width to 100% */
-	      margin: auto;
-	  }
-	  .carousel-caption h3 {
-	      color: #fff !important;
-	  }
-	  @media (max-width: 600px) {
-	    .carousel-caption {
-	      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-	    }
-	  }
-	  .bg-1 {
-	      background: #2d2d30;
-	      color: #bdbdbd;
-	  }
-	  .bg-1 h3 {color: #fff;}
-	  .bg-1 p {font-style: italic;}
-	  .list-group-item:first-child {
-	      border-top-right-radius: 0;
-	      border-top-left-radius: 0;
-	  }
-	  .list-group-item:last-child {
-	      border-bottom-right-radius: 0;
-	      border-bottom-left-radius: 0;
-	  }
-	  .thumbnail {
-	      padding: 0 0 15px 0;
-	      border: none;
-	      border-radius: 0;
-	  }
-	  .thumbnail p {
-	      margin-top: 15px;
-	      color: #555;
-	  }
-	  .btn {
-	      padding: 10px 20px;
-	      background-color: #333;
-	      color: #f1f1f1;
-	      border-radius: 0;
-	      transition: .2s;
-	  }
-	  .btn:hover, .btn:focus {
-	      border: 1px solid #333;
-	      background-color: #fff;
-	      color: #000;
-	  }
-	  .modal-header, h4, .close {
-	      background-color: #333;
-	      color: #fff !important;
-	      text-align: center;
-	      font-size: 30px;
-	  }
-	  .modal-header, .modal-body {
-	      padding: 40px 50px;
-	  }
-	  .nav-tabs li a {
-	      color: #777;
-	  }
-	  .navbar {
-	      font-family: Montserrat, sans-serif;
-	      margin-bottom: 0;
-	      background-color: #2d2d30;
-	      border: 0;
-	      font-size: 11px !important;
-	      letter-spacing: 4px;
-	      opacity: 0.9;
-	  }
-	  .navbar li a, .navbar .navbar-brand { 
-	      color: #d5d5d5 !important;
-	  }
-	  .navbar-nav li a:hover {
-	      color: #fff !important;
-	  }
-	  .navbar-nav li.active a {
-	      color: #fff !important;
-	      background-color: #29292c !important;
-	  }
-	  .navbar-default .navbar-toggle {
-	      border-color: transparent;
-	  }
-	  .open .dropdown-toggle {
-	      color: #fff;
-	      background-color: #555 !important;
-	  }
-	  .dropdown-menu li a {
-	      color: #000 !important;
-	  }
-	  .dropdown-menu li a:hover {
-	      background-color: red !important;
-	  }
-	  footer {
-	      background-color: #2d2d30;
-	      color: #f5f5f5;
-	      padding: 32px;
-	  }
-	  footer a {
-	      color: #f5f5f5;
-	  }
-	  footer a:hover {
-	      color: #777;
-	      text-decoration: none;
-	  }  
-	  .form-control {
-	      border-radius: 0;
-	  }
-	  textarea {
-	      resize: none;
-	  }
-	  .form-signin
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+
+    <!-- jQuery/Bootstrap/Google js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+	<style>
+	body {
+	    font: 400 15px/1.8 Lato, sans-serif;
+	    color: #777;
+	}
+	h3, h4 {
+	    margin: 10px 0 30px 0;
+	    letter-spacing: 10px;      
+	    font-size: 20px;
+	    color: #111;
+	}
+	.container {
+	    padding: 80px 120px;
+	}
+	.person {
+	    border: 10px solid transparent;
+	    margin-bottom: 25px;
+	    width: 80%;
+	    height: 80%;
+	    opacity: 0.7;
+	}
+	.person:hover {
+	    border-color: #f1f1f1;
+	}
+	.bg-1 {
+	    background: #2d2d30;
+	    color: #bdbdbd;
+	}
+	.bg-1 h3 {
+		color: #fff;
+	}
+	.bg-1 p {
+		font-style: italic;
+	}
+	.list-group-item:first-child {
+	    border-top-right-radius: 0;
+	    border-top-left-radius: 0;
+	}
+	.list-group-item:last-child {
+	    border-bottom-right-radius: 0;
+	    border-bottom-left-radius: 0;
+	}
+	.thumbnail {
+	    padding: 0 0 15px 0;
+	    border: none;
+	    border-radius: 0;
+	}
+	.thumbnail p {
+	    margin-top: 15px;
+	    color: #555;
+	}
+	.btn {
+	    padding: 10px 20px;
+	    background-color: #333;
+    	color: #f1f1f1;
+	    border-radius: 0;
+	    transition: .2s;
+	}
+	.btn:hover, .btn:focus {
+	    border: 1px solid #333;
+	    background-color: #fff;
+	    color: #000;
+	}
+	.modal-header, h4, .close {
+	    background-color: #333;
+	    color: #fff !important;
+    	text-align: center;
+	    font-size: 30px;
+	}
+	.modal-header, .modal-body {
+	    padding: 40px 50px;
+	}
+	.nav-tabs li a {
+	    color: #777;
+	}
+	.navbar {
+	    font-family: Montserrat, sans-serif;
+	    margin-bottom: 0;
+    	background-color: #2d2d30;
+	    border: 0;
+	    font-size: 11px !important;
+	    letter-spacing: 4px;
+	    opacity: 0.9;
+	}
+	.navbar li a, .navbar .navbar-brand { 
+	    color: #d5d5d5 !important;
+	}
+	.navbar-nav li a:hover {
+	    color: #fff !important;
+	}
+	.navbar-nav li.active a {
+	    color: #fff !important;
+	    background-color: #29292c !important;
+	}
+	.navbar-default .navbar-toggle {
+	    border-color: transparent;
+	}
+	.open .dropdown-toggle {
+	    color: #fff;
+	    background-color: #555 !important;
+	}
+	.dropdown-menu li a {
+	    color: #000 !important;
+	}
+	.dropdown-menu li a:hover {
+	    background-color: red !important;
+	}
+	footer {
+	    background-color: #2d2d30;
+	    color: #f5f5f5;
+	    padding: 32px;
+	}
+	footer a {
+	    color: #f5f5f5;
+	}
+	footer a:hover {
+	    color: #777;
+	    text-decoration: none;
+	}  
+	.form-control {
+	    border-radius: 0;
+	}
+	textarea {
+	    resize: none;
+	}
+	.form-signin
 	{
 	    max-width: 330px;
 	    padding: 15px;
@@ -252,29 +248,11 @@
 
 <!-- Container (LOG IN Section) -->
 <div id="login" class="text-center">
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-md-offset-4">
-            <h1 class="text-center login-title">Log in to Google Calendar</h1>
-            <div class="account-wall">
-                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
-                    alt="">
-                <form class="form-signin">
-                <input type="text" class="form-control" placeholder="Email" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">
-                    Sign in</button>
-                <label class="checkbox pull-left">
-                    <input type="checkbox" value="remember-me">
-                    Remember me
-                </label>
-                <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
-                </form>
-            </div>
-            <a href="#" class="text-center new-account">Create an account </a>
-        </div>
-    </div>
-</div>
+  <div class="container">
+      <div class="row">
+          <div class="g-signin2" data-onsuccess="onSignIn">Log In Button Here</div>
+      </div>
+  </div>
 </div>
 
 
@@ -302,37 +280,20 @@
 
 
 
-<!-- Container (LOGIN Section) -->
-<!-- [START body] -->
-<body>
-  <script>
-    function onSuccess(googleUser) {
-      console.log('Signed in as: ' + googleUser.getBasicProfile().getName());
-    }
-  </script>
-  <div class="g-signin2" data-onsuccess="onSuccess"></div>
-</body>
-<!-- [END body] -->
-
-
-
-
-
 <!-- Container (ABOUT Section) -->
 <div id="about" class="container text-center">
   <h3>ABOUT HIT OR MISS</h3>
-  <p><a href="https://github.com/HitOrMiss480/demo-web-project">Source Code</a></p>
+  <p><a href="https://github.com/HitOrMiss480/demo-web-project">Project Source Code</a></p>
   <br>
   <div class="row">
     <div class="col-sm-2 col-md-offset-1">
-      <p class="text-center"><strong>Jung Yeo</strong></p><br>
+      <p class="text-center"><strong>Phillip Kasteiner</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
-        <p>Developer</p>
-        <p>Description</p>
-        <p><a href="https://github.com/JungYeo0">
+        <p>Back-end Developer</p>
+        <p><a href="https://github.com/phillipkasteiner">
           <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
         </p>
       </div>
@@ -343,48 +304,44 @@
         <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
-        <p>Developer</p>
-        <p>Description</p>
+        <p>Back-end Developer</p>
         <p><a href="https://github.com/davidws22">
           <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
         </p>
       </div>
     </div>
     <div class="col-sm-2">
-      <p class="text-center"><strong>Phillip Kasteiner</strong></p><br>
+      <p class="text-center"><strong>Jung Yeo</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
-        <p>Developer</p>
-        <p>Description</p>
-        <p><a href="https://github.com/phillipkasteiner">
+        <p>Front-end Developer</p>
+        <p><a href="https://github.com/JungYeo0">
           <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
         </p>
       </div>
     </div>
       <div class="col-sm-2">
-      <p class="text-center"><strong>Summaya Kazi</strong></p><br>
+      <p class="text-center"><strong>Vivian Long</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
         <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo4" class="collapse">
-        <p>Developer</p>
-        <p>Description</p>
-        <p><a href="https://github.com/sakazi">
+        <p>Front-end Developer</p>
+        <p><a href="https://github.com/vlong93">
           <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
         </p>
       </div>
     </div>
     <div class="col-sm-2">
-      <p class="text-center"><strong>Vivian Long</strong></p><br>
+      <p class="text-center"><strong>Summaya Kazi</strong></p><br>
       <a href="#demo5" data-toggle="collapse">
         <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo5" class="collapse">
-        <p>Developer</p>
-        <p>Description</p>
-        <p><a href="https://github.com/vlong93">
+        <p>Front-end Developer</p>
+        <p><a href="https://github.com/sakazi">
           <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
         </p>
       </div>
