updated web pages

--- a/Web Pages/about.html
+++ b/Web Pages/about.html
@@ -40,10 +40,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#login">LOG IN</a></li>
-        <li><a href="#add">ADD</a></li>
-        <li><a href="#events">EVENTS</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="checklist.html">ADD</a></li>
+        <li><a href="about.html">ABOUT</a></li>
       </ul>
     </div>
   </div>
