--- a/Web Pages/checklist.html
+++ b/Web Pages/checklist.html
@@ -40,10 +40,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#login">LOG IN</a></li>
-        <li><a href="#add">ADD</a></li>
-        <li><a href="#events">EVENTS</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="checklist.html">ADD</a></li>
+        <li><a href="about.html">ABOUT</a></li>
       </ul>
     </div>
   </div>
@@ -60,6 +59,17 @@
           <button type="button" onclick="makeCheckList()">Default</button>
           <button type="button" onclick="submitButtonPress()">Submit</button>
 	   </p>
+  </div>
+</div>
+
+<!-- Container (CALENDAR Section) -->
+<div id="events" class="bg-1 text-center">
+  <div class="container">
+    <h3 class="text-center">CALENDAR</h3>
+
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=tiiivp5ufbr50b77rvfqr50i0o%40group.calendar.google.com&amp;color=%23875509&amp;src=h20djm9o4relnj5t8cpii410uc%40group.calendar.google.com&amp;color=%23182C57&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no">
+    </iframe>
+
   </div>
 </div>
 
