--- a/Web Pages/home.html
+++ b/Web Pages/home.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Checklist CSS -->
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="home-style.css">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
@@ -19,207 +23,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-	<style>
-	body {
-	    font: 400 15px/1.8 Lato, sans-serif;
-	    color: #777;
-	}
-	h3, h4 {
-	    margin: 10px 0 30px 0;
-	    letter-spacing: 10px;      
-	    font-size: 20px;
-	    color: #111;
-	}
-	.container {
-	    padding: 80px 120px;
-	}
-	.person {
-	    border: 10px solid transparent;
-	    margin-bottom: 25px;
-	    width: 80%;
-	    height: 80%;
-	    opacity: 0.7;
-	}
-	.person:hover {
-	    border-color: #f1f1f1;
-	}
-	.bg-1 {
-	    background: #2d2d30;
-	    color: #bdbdbd;
-	}
-	.bg-1 h3 {
-		color: #fff;
-	}
-	.bg-1 p {
-		font-style: italic;
-	}
-	.list-group-item:first-child {
-	    border-top-right-radius: 0;
-	    border-top-left-radius: 0;
-	}
-	.list-group-item:last-child {
-	    border-bottom-right-radius: 0;
-	    border-bottom-left-radius: 0;
-	}
-	.thumbnail {
-	    padding: 0 0 15px 0;
-	    border: none;
-	    border-radius: 0;
-	}
-	.thumbnail p {
-	    margin-top: 15px;
-	    color: #555;
-	}
-	.btn {
-	    padding: 10px 20px;
-	    background-color: #333;
-    	color: #f1f1f1;
-	    border-radius: 0;
-	    transition: .2s;
-	}
-	.btn:hover, .btn:focus {
-	    border: 1px solid #333;
-	    background-color: #fff;
-	    color: #000;
-	}
-	.modal-header, h4, .close {
-	    background-color: #333;
-	    color: #fff !important;
-    	text-align: center;
-	    font-size: 30px;
-	}
-	.modal-header, .modal-body {
-	    padding: 40px 50px;
-	}
-	.nav-tabs li a {
-	    color: #777;
-	}
-	.navbar {
-	    font-family: Montserrat, sans-serif;
-	    margin-bottom: 0;
-    	background-color: #2d2d30;
-	    border: 0;
-	    font-size: 11px !important;
-	    letter-spacing: 4px;
-	    opacity: 0.9;
-	}
-	.navbar li a, .navbar .navbar-brand { 
-	    color: #d5d5d5 !important;
-	}
-	.navbar-nav li a:hover {
-	    color: #fff !important;
-	}
-	.navbar-nav li.active a {
-	    color: #fff !important;
-	    background-color: #29292c !important;
-	}
-	.navbar-default .navbar-toggle {
-	    border-color: transparent;
-	}
-	.open .dropdown-toggle {
-	    color: #fff;
-	    background-color: #555 !important;
-	}
-	.dropdown-menu li a {
-	    color: #000 !important;
-	}
-	.dropdown-menu li a:hover {
-	    background-color: red !important;
-	}
-	footer {
-	    background-color: #2d2d30;
-	    color: #f5f5f5;
-	    padding: 32px;
-	}
-	footer a {
-	    color: #f5f5f5;
-	}
-	footer a:hover {
-	    color: #777;
-	    text-decoration: none;
-	}  
-	.form-control {
-	    border-radius: 0;
-	}
-	textarea {
-	    resize: none;
-	}
-	.form-signin
-	{
-	    max-width: 330px;
-	    padding: 15px;
-	    margin: 0 auto;
-	}
-	.form-signin .form-signin-heading, .form-signin .checkbox
-	{
-	    margin-bottom: 10px;
-	}
-	.form-signin .checkbox
-	{
-	    font-weight: normal;
-	}
-	.form-signin .form-control
-	{
-	    position: relative;
-	    font-size: 16px;
-	    height: auto;
-	    padding: 10px;
-	    -webkit-box-sizing: border-box;
-	    -moz-box-sizing: border-box;
-	    box-sizing: border-box;
-	}
-	.form-signin .form-control:focus
-	{
-	    z-index: 2;
-	}
-	.form-signin input[type="text"]
-	{
-	    margin-bottom: -1px;
-	    border-bottom-left-radius: 0;
-	    border-bottom-right-radius: 0;
-	}
-	.form-signin input[type="password"]
-	{
-	    margin-bottom: 10px;
-	    border-top-left-radius: 0;
-	    border-top-right-radius: 0;
-	}
-	.account-wall
-	{
-	    margin-top: 20px;
-	    padding: 40px 0px 20px 0px;
-	    background-color: #f7f7f7;
-	    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	}
-	.login-title
-	{
-	    color: #555;
-	    font-size: 18px;
-	    font-weight: 400;
-	    display: block;
-	}
-	.profile-img
-	{
-	    width: 96px;
-	    height: 96px;
-	    margin: 0 auto 10px;
-	    display: block;
-	    -moz-border-radius: 50%;
-	    -webkit-border-radius: 50%;
-	    border-radius: 50%;
-	}
-	.need-help
-	{
-	    margin-top: 10px;
-	}
-	.new-account
-	{
-	    display: block;
-	    margin-top: 10px;
-	}
-  </style>
+	
 </head>
 
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -236,137 +40,29 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#login">LOG IN</a></li>
-        <li><a href="#add">ADD</a></li>
-        <li><a href="#events">EVENTS</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="checklist.html">ADD</a></li>
+        <li><a href="about.html">ABOUT</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 
-<!-- Container (LOG IN Section) -->
-<div id="login" class="text-center">
-  <div class="container">
-      <div class="row">
-          <div class="g-signin2" data-onsuccess="onSignIn">Log In Button Here</div>
-      </div>
-  </div>
-</div>
+<!-- Container (HOME Section) -->
+<div id="home" class="text-center">
+	<div class="container">
 
+    <p>[Pretty picture]</p>
+    <p>[Description/explanation of how our project works here]</p>
+    <p>Login button here</p>
 
-<!-- Container (ADD Section) -->
-<div id="add" class="text-center">
-  <div class="container">
-    <h3 class="text-center">ADD</h3>
-    <p class="text-center">[Checklist goes here]</p>
-
-    
-  </div>
-</div>
-
-
-<!-- Container (EVENTS Section) -->
-<div id="events" class="bg-1 text-center">
-  <div class="container">
-    <h3 class="text-center">EVENTS</h3>
-
-    <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=tiiivp5ufbr50b77rvfqr50i0o%40group.calendar.google.com&amp;color=%23875509&amp;src=h20djm9o4relnj5t8cpii410uc%40group.calendar.google.com&amp;color=%23182C57&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no">
-    </iframe>
-
-  </div>
+	</div>
 </div>
 
 
 
-<!-- Container (ABOUT Section) -->
-<div id="about" class="container text-center">
-  <h3>ABOUT HIT OR MISS</h3>
-  <p><a href="https://github.com/HitOrMiss480/demo-web-project">Project Source Code</a></p>
-  <br>
-  <div class="row">
-    <div class="col-sm-2 col-md-offset-1">
-      <p class="text-center"><strong>Phillip Kasteiner</strong></p><br>
-      <a href="#demo" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo" class="collapse">
-        <p>Back-end Developer</p>
-        <p><a href="https://github.com/phillipkasteiner">
-          <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
-        </p>
-      </div>
-    </div>
-    <div class="col-sm-2">
-      <p class="text-center"><strong>David Shin</strong></p><br>
-      <a href="#demo2" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>Back-end Developer</p>
-        <p><a href="https://github.com/davidws22">
-          <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
-        </p>
-      </div>
-    </div>
-    <div class="col-sm-2">
-      <p class="text-center"><strong>Jung Yeo</strong></p><br>
-      <a href="#demo3" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo3" class="collapse">
-        <p>Front-end Developer</p>
-        <p><a href="https://github.com/JungYeo0">
-          <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
-        </p>
-      </div>
-    </div>
-      <div class="col-sm-2">
-      <p class="text-center"><strong>Vivian Long</strong></p><br>
-      <a href="#demo4" data-toggle="collapse">
-        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo4" class="collapse">
-        <p>Front-end Developer</p>
-        <p><a href="https://github.com/vlong93">
-          <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
-        </p>
-      </div>
-    </div>
-    <div class="col-sm-2">
-      <p class="text-center"><strong>Summaya Kazi</strong></p><br>
-      <a href="#demo5" data-toggle="collapse">
-        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo5" class="collapse">
-        <p>Front-end Developer</p>
-        <p><a href="https://github.com/sakazi">
-          <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="HTML tutorial" style="width:20px;height:20px;border:0;"></a>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
   
-<style>
-/* Add a dark background color to the footer */
-footer {
-    background-color: #2d2d30;
-    color: #f5f5f5;
-    padding: 32px;
-}
-
-footer a {
-    color: #f5f5f5;
-}
-
-footer a:hover {
-    color: #777;
-    text-decoration: none;
-}
-</style>
-
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
@@ -374,43 +70,8 @@ footer a:hover {
   <p>&copy; Hit or Miss 2017</a></p> 
 </footer>
 
-<script>
-$(document).ready(function(){
-    // Initialize Tooltip
-    $('[data-toggle="tooltip"]').tooltip(); 
-})
-</script>
-
-<script>
-$(document).ready(function(){
-  // Initialize Tooltip
-  $('[data-toggle="tooltip"]').tooltip(); 
-  
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-})
-</script>
+<script src="homepage.js"></script>
+<script src="checklistScript.js"></script>
 
 </body>
 </html>
