updated web pages again

--- a/Web Pages/home.html
+++ b/Web Pages/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="image/checkBoxIcon.ico">
+
 	<!-- Theme Made By www.w3schools.com - No Copyright -->
 	<title>CPP Calendar</title>
 	<meta charset="utf-8">
@@ -36,7 +38,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#home">CPP Calendar</a>
+      <a class="navbar-brand" href="#home">
+        CPP Calendar
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -64,10 +68,10 @@
 
   
 <footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+  <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>&copy; Hit or Miss 2017</a></p> 
+  <p>&copy; Hit or Miss 2017 | <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">Theme Design</a></p> 
 </footer>
 
 <script src="homepage.js"></script>
