--- a/Web Pages/about.html
+++ b/Web Pages/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="image/checkBoxIcon.ico">
+
 	<!-- Theme Made By www.w3schools.com - No Copyright -->
 	<title>CPP Calendar</title>
 	<meta charset="utf-8">
@@ -54,6 +56,8 @@
 <div id="about" class="container text-center">
   <h3>ABOUT HIT OR MISS</h3>
   <p><a href="https://github.com/HitOrMiss480/demo-web-project">Project Source Code</a></p>
+  <br>
+  <p>[Click pictures to expand]</p>
   <br>
   <div class="row">
     <div class="col-sm-2 col-md-offset-1">
@@ -120,10 +124,10 @@
 </div>
   
 <footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+  <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>&copy; Hit or Miss 2017</a></p> 
+  <p>&copy; Hit or Miss 2017 | <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">Theme Design</a></p> 
 </footer>
 
 <script src="homepage.js"></script>
