--- a/Web Pages/checklist.html
+++ b/Web Pages/checklist.html
@@ -23,6 +23,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+    <!-- bag of mystery-->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -57,8 +59,7 @@
 	    <p class="text-center">
             
 	    	<div id="checklist"></div>
-          <button type="button" onclick="makeCheckList()">Default</button>
-          <button type="button" onclick="submitButtonPress()">Submit</button>
+          <a type="button" onclick="submitButtonPress()" class="boton" href="#">Submit</a>
 	   </p>
   </div>
 </div>
@@ -85,6 +86,7 @@
 
 <script src="homepage.js"></script>
 <script src="checklistScript.js"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
 </body>
 </html>
