--- a/Web Pages/checklist.html
+++ b/Web Pages/checklist.html
@@ -13,7 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Checklist CSS -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="home-style.css">
 
     <!-- Fonts -->
@@ -83,7 +83,8 @@
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>&copy; Hit or Miss 2017 | <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">Theme Design</a></p> 
+  <p>&copy; Hit or Miss 2017 <br>
+    <a href="https://www.w3schools.com" data-toggle="tooltip">Theme Design</a></p> 
 </footer>
 
 <script src="homepage.js"></script>
