--- a/Web Pages/home.html
+++ b/Web Pages/home.html
@@ -13,7 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Checklist CSS -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="home-style.css">
 
     <!-- Fonts -->
@@ -25,7 +25,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-	
 </head>
 
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -55,12 +54,11 @@
 
 <!-- Container (HOME Section) -->
 <div id="home" class="text-center">
-	<div class="container">
-
-    <p>[Pretty picture]</p>
-    <p>[Description/explanation of how our project works here]</p>
-    <p>Login button here</p>
-
+  <div class="carousel-inner" class="text-center">
+      <img src="image/Tileable.png" alt="home-picture" style="width:100%;">
+      
+        <button id="text" class="loginBtn loginBtn--google">Login with Google</button>
+      
 	</div>
 </div>
 
@@ -71,7 +69,8 @@
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>&copy; Hit or Miss 2017 | <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">Theme Design</a></p> 
+  <p>&copy; Hit or Miss 2017 <br>
+    <a href="https://www.w3schools.com" data-toggle="tooltip">Theme Design</a></p> 
 </footer>
 
 <script src="homepage.js"></script>
