--- a/Web Pages/about.html
+++ b/Web Pages/about.html
@@ -76,7 +76,7 @@
     <div class="col-sm-2">
       <p class="text-center"><strong>David Shin</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="image/david.jpg" class="img-circle person" alt="David" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
         <p>Back-end Developer</p>
