--- a/Web Pages/about.html
+++ b/Web Pages/about.html
@@ -88,7 +88,7 @@
     <div class="col-sm-2">
       <p class="text-center"><strong>Jung Yeo</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="image/jung.jpg" class="img-circle person" alt="Jung" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
         <p>Front-end Developer</p>
