fixed linking issue between pages

--- a/src/main/webapp/checklist.html
+++ b/src/main/webapp/checklist.html
@@ -44,7 +44,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="home.html">HOME</a></li>
+        <li><a href="/">HOME</a></li>
         <li><a href="checklist.html">ADD</a></li>
         <li><a href="about.html">ABOUT</a></li>
       </ul>
