added connection to back end

--- a/src/main/webapp/checklist.html
+++ b/src/main/webapp/checklist.html
@@ -30,7 +30,7 @@
 	
 </head>
 
-<body id="home" data-spy="scroll" data-target=".navbar" data-offset="50" onload="makeCheckList();">
+<body id="home" data-spy="scroll" data-target=".navbar" data-offset="50" onload="onLoadMake();">
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
