--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,20 +52,17 @@
 </nav>
 
 
-<!-- Container (HOME Section) -->
-<div id="home" class="text-center">
-  <div class="carousel-inner" class="text-center">
-      <img src="image/Tileable.png" alt="home-picture" style="width:100%;">
-      
-        <button id="text" onclick = "location.href = 'checklist.html';" class="loginBtn loginBtn--google">Login with Google</button>
-      
+	<!-- Container (HOME Section) -->
+	<div id="home" class="text-center">
+		<div class="carousel-inner" class="text-center">
+			<img src="image/Tileable.png" alt="home-picture" style="width: 100%;">
+			<form action="/login/google">
+				<button id="text" onclick="submit" class="loginBtn loginBtn--google">Login with Google</button>
+			</form>
+		</div>
 	</div>
-</div>
 
-
-
-  
-<footer class="text-center">
+	<footer class="text-center">
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
