--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">HOME</a></li>
+        <li><a href="#">HOME</a></li>
         <li><a href="checklist.html">ADD</a></li>
         <li><a href="about.html">ABOUT</a></li>
       </ul>
@@ -57,10 +57,23 @@
 		<div class="carousel-inner" class="text-center">
 			<img src="image/Tileable.png" alt="home-picture" style="width: 100%;">
 			<form action="/login/google">
-				<button id="text" onclick="submit" class="loginBtn loginBtn--google">Login with Google</button>
+				<button id="text" onclick="submit" class="loginBtn loginBtn--google">Log in with Google</button>
 			</form>
 		</div>
 	</div>
+    
+ 	<!-- Container (HOW TO Section) -->
+	<div id="how-to" class="text-center">
+		<div class="container" class="text-center">
+            <h3><b>HOW TO USE</b></h3>
+            <h2>Step 1</h2>
+            <p>Log into Google and give us permission to add events to your Google Calendar</p>
+            <h2>Step 2</h2>
+            <p>Select the organizations that you would like to receive events from</p>
+            <h2>Step 3</h2>
+            <p>See the schedules of your selected organizations automatically added to your Google Calendar</p>
+		</div>
+	</div>   
 
 	<footer class="text-center">
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
