--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -42,7 +42,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="checklist.html">ADD</a></li>
         <li><a href="about.html">ABOUT</a></li>
       </ul>
@@ -64,7 +64,7 @@
     <div class="col-sm-2 col-md-offset-1">
       <p class="text-center"><strong>Phillip Kasteiner</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="image/phillip.jpg" class="img-circle person" alt="Phillip" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
         <p>Back-end Developer</p>
@@ -100,7 +100,7 @@
       <div class="col-sm-2">
       <p class="text-center"><strong>Vivian Long</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
-        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Vivian" width="255" height="255">
       </a>
       <div id="demo4" class="collapse">
         <p>Front-end Developer</p>
@@ -112,7 +112,7 @@
     <div class="col-sm-2">
       <p class="text-center"><strong>Summaya Kazi</strong></p><br>
       <a href="#demo5" data-toggle="collapse">
-        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="image/summaya.jpg" class="img-circle person" alt="Summaya" width="255" height="255">
       </a>
       <div id="demo5" class="collapse">
         <p>Front-end Developer</p>
