--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -55,9 +55,6 @@
 <!-- Container (ABOUT Section) -->
 <div id="about" class="container text-center">
   <h3>ABOUT</h3>
-  <div class="rainbow"><a data-animation="ripple" onclick="goToGithub()">Source Code</a></div>
-  <br><br>
-  <h3>DEVELOPERS</h3>
   <p>[Click pictures to expand]</p>
   <br>
   <div class="row">
@@ -100,7 +97,7 @@
       <div class="col-sm-2">
       <p class="text-center"><strong>Vivian Long</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
-        <img src="http://1.bp.blogspot.com/-jHrJ3VITQf8/UDILF_ctbOI/AAAAAAAACn4/UwOvDmW4EJw/s1600/CUTE+GIRL+HAIR+FB+DP.jpg" class="img-circle person" alt="Vivian" width="255" height="255">
+        <img src="image/vivian.jpg" class="img-circle person" alt="Vivian" width="255" height="255">
       </a>
       <div id="demo4" class="collapse">
         <p>Front-end Developer</p>
@@ -123,6 +120,9 @@
     </div>
   </div>
 </div>
+    
+<div class="rainbow"><a data-animation="ripple" onclick="goToGithub()">Source Code</a></div>
+<br><br>
   
 <footer class="text-center">
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
