--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="image/checkBoxIcon.ico">
 
 	<!-- Theme Made By www.w3schools.com - No Copyright -->
-	<title>CPP Calendar</title>
+	<title>CPP Student Schedule</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-client_id" content="567625698601-1tm35nqtjfp2hn2mpav51po9kl9loq90.apps.googleusercontent.com">
@@ -38,7 +38,7 @@
         <span class="icon-bar"></span>                        
       </button>
       <a class="navbar-brand" href="/">
-        CPP Calendar
+        CPP Student Schedule
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -71,7 +71,7 @@
             <h2>Step 2</h2>
             <p>Select the organizations that you would like to receive events from</p>
             <h2>Step 3</h2>
-            <p>See the schedules of your selected organizations automatically added to your Google Calendar</p>
+            <p>Check your Google Calendar; the organizations' events that you selected are now added to your schedule</p>
 		</div>
 	</div>   
 
